@@ -1,0 +1,1 @@
+<span tal:replace="provider:bones" />
